Change layout and add page title helper [#84076992]

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,18 +1,5 @@
 !!!
-%head
-  / Standard Meta
-  %meta{:charset => "utf-8"}/
-  %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
-  %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
-  / Site Properities
-  %title Pittsburgh Triathlon Club Membership Directory
-  %meta{:content => "A membership directory for the Pittsburgh Triathlon Club", :name => "description"}/
-  %meta{:content => "membership directory", :name => "keywords"}/
-  = stylesheet_link_tag 'application', media: 'all'
-  = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.0.0/semantic.min.css', media: 'all'
-  = javascript_include_tag 'application'
-  = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.0.0/semantic.min.js'
-  = csrf_meta_tags
+= render partial: "layouts/head"
 %body
   - if member_signed_in?
     = render partial: "layouts/menu"
